Update CSS to stop display if array too large

--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ body {
 
 .calculator {
   height: 75%;
-  width: max-content;
+  width: 454px;
+  /* max-width: 40%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,6 +53,7 @@ body {
   width: 100%;
   background-color: rgb(199, 199, 199, 0.4);
   font-size: 70px;
+  flex-wrap: wrap;
 }
 
 .rows {
